[tool.poetry]
name = "deep-vgl-benchmark"
version = "0.1.0"
description = ""
authors = ["Saravanabalagi Ramachandran <saravanabalagi@hotmail.com>"]
readme = "README.md"
packages = [{include = "deep_vgl_benchmark"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"
psutil = "^5.9.4"
faiss-gpu = "^1.7.2"
tqdm = "^4.64.1"
pillow = "^9.4.0"
scikit-learn = "^1.2.0"
torchscan = "^0.1.2"
googledrivedownloader = "^0.4"
requests = "^2.28.1"
timm = "0.4.12"
transformers = "4.8.2"
einops = "^0.6.0"
numpy = "1.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
